syntax = "proto3";

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message Account {
    string account_number = 1;
    string curr_code = 2;
    double intt_rate = 3;
    string product_code = 4;
    int64 mat_date = 5;
    string rate_flag = 6;
    string repricing_index = 7;
    string psl = 8;
    string npa = 9;
    string indv_corp_flag = 10;
    string customer_type = 11;
    string asset_class_id = 12;
    string customer_id = 13;
    string prod_type = 14;
    double final_int_rate = 15;
    int64 cost_centre = 16;
    string alm_line = 17;
    string coa = 18;
    string division = 19;
    int64 rep_freq = 20;
    int64 next_repricing_date = 21;
    int64 last_repricing_date = 22;
    string asset_class = 23;
    int64 value_date = 24;
    string branch = 25;
    int64 org_tenor = 26;
    int64 rep_tenor = 27;
    string weaker = 28;
    double current_book_bal = 29;
    string al_line = 30;
    string balm_l2 = 31;
    string ia_line = 32;
    string shceme_id = 33;
    string orig_bm = 34;
    double der_int_rate = 35;
    double bnchmrk_rate = 36;
    double spread = 37;
    string fully_floating_flg = 38;
    string customer_name = 39;
    double orig_bal = 40;
    string gr_ofs_gl = 41;
    string scheme_id = 42;
    string is_ofs_gl = 43;
    string re_ofs_gl = 44;
    string ui_ofs_gl = 45;
    double gr_dr = 46;
    double gr_cr = 47;
    double re_dr = 48;
    double re_cr = 49;
    double is_dr = 50;
    double is_cr = 51;
    double ui_dr = 52;
    double ui_cr = 53;
    string weaker_desc = 54;
    string int_income_gl = 55;
    string overdue_int_gl = 56;
    string int_on_cancellation_gl = 57;
    string writeoff_gl = 58;
    double int_income_gl_amt = 59;
    double overdue_int_gl_amt = 60;
    double int_on_cancellation_gl_amt = 61;
    double writeoff_gl_amt = 62;
    string sma_flag = 63
    repeated Cashflow cashflows = 64;
}
